--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "questify",
   "version": "0.1.0",
+  "homepage": "http://MichalDziuba.github.io/Questify",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.10.5",
@@ -34,6 +35,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -58,6 +61,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
+    "gh-pages": "^4.0.0",
     "postcss": "^8.4.19",
     "tailwindcss": "^3.2.4"
   }
